[gd_scene load_steps=18 format=3 uid="uid://d14aomb1nxdul"]

[ext_resource type="Texture2D" uid="uid://c8p1snq75706p" path="res://Art/Enemies/Boss/Boss Head.png" id="1_p6smh"]
[ext_resource type="Script" path="res://Characters/Enemies/Gooey/enemy_state_machine.gd" id="3_1ghqh"]
[ext_resource type="Script" path="res://Characters/Enemies/Boss/state_hover.gd" id="3_7j2cy"]
[ext_resource type="PackedScene" uid="uid://bumarj1v8jdik" path="res://Characters/Enemies/Boss/boss_projectile.tscn" id="4_yilfy"]
[ext_resource type="Script" path="res://Characters/Enemies/Boss/state_warning.gd" id="5_rv41e"]
[ext_resource type="Script" path="res://Characters/Enemies/Boss/state_attack.gd" id="6_j37q5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hm2k7"]
atlas = ExtResource("1_p6smh")
region = Rect2(0, 0, 180, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_b16le"]
atlas = ExtResource("1_p6smh")
region = Rect2(180, 0, 180, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_shbw5"]
atlas = ExtResource("1_p6smh")
region = Rect2(360, 0, 180, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihpjq"]
atlas = ExtResource("1_p6smh")
region = Rect2(540, 0, 180, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88cv"]
atlas = ExtResource("1_p6smh")
region = Rect2(720, 0, 180, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_njac0"]
atlas = ExtResource("1_p6smh")
region = Rect2(900, 0, 180, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1eof"]
atlas = ExtResource("1_p6smh")
region = Rect2(1080, 0, 180, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_576io"]
atlas = ExtResource("1_p6smh")
region = Rect2(1260, 0, 180, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ls6x"]
animations = [{
"frames": [],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"cooldown",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm2k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b16le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shbw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihpjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njac0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1eof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_576io")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"warning",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8jbdf"]
radius = 60.0
height = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3l5o6"]
size = Vector2(567.5, 314)

[node name="BossHead" type="CharacterBody2D"]
collision_layer = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1ls6x")
animation = &"hover"
frame = 2
frame_progress = 0.198048

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 7)
shape = SubResource("CapsuleShape2D_8jbdf")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_3l5o6")

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "character", "sprite")]
script = ExtResource("3_1ghqh")
initial_state = NodePath("Hover")
character = NodePath("..")
sprite = NodePath("../AnimatedSprite2D")

[node name="Hover" type="Node" parent="EnemyStateMachine"]
script = ExtResource("3_7j2cy")
projectile = ExtResource("4_yilfy")
speed = 5000.0
first_anim_name = "hover"

[node name="HoverTimer" type="Timer" parent="EnemyStateMachine/Hover"]
wait_time = 2.0
one_shot = true

[node name="ProjectileTimer" type="Timer" parent="EnemyStateMachine/Hover"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Warning" type="Node" parent="EnemyStateMachine"]
script = ExtResource("5_rv41e")

[node name="Attack" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_j37q5")

[node name="LeftMarker" type="Marker2D" parent="."]
position = Vector2(-46, 55)

[node name="RightMarker" type="Marker2D" parent="."]
position = Vector2(34, 55)

[connection signal="animation_finished" from="AnimatedSprite2D" to="EnemyStateMachine/Warning" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="EnemyStateMachine/Hover" method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="EnemyStateMachine/Attack" method="_on_detection_area_body_entered"]
